# MCP-SSH-TOOL

./: .env.example  .gitignore  README.md
.antigravitycli/: ad1353bb-bc1c-4073-a3ed-46e72721a653.json
config/: mcp_config.json  mcp_config_linux.json
docs/: ARCHITECTURE.md  CHECKLIST_OPERACAO.md  DOCUMENTACAO_COMPLETA.md  GUIA_CONFIGURACAO_TROUBLESHOOTING.md  INDICE_DOCUMENTACAO.md  RUNBOOK.md  SETUP_COMPLETE.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md
scripts/: Register-StartupTask.ps1  Start-SSHMCPServer.ps1  StartSSHMCP.bat  install-mcp-config.sh  install_mcp_config.ps1  quick-check.ps1  quick-check.sh  setup.ps1  setup.sh  start_ssh_mcp.bat
server/: .gitignore  README.md  README_ja.md  claude-desktop-config-example.json  cline_ssh_usage_example.md  cline_ssh_usage_example_ja.md  create_test_file.py  install_dependencies.sh  install_ssh_mcp.py  install_ssh_mcp_claude.py  mcp-config-example.json  pyproject.toml  setup_and_test.sh  ssh_mcp_guide.html  ssh_mcp_guide_ja.html  test_file.txt  test_ssh_mcp.py  test_ssh_mcp.sh
server/examples/: ssh_example.py
server/scripts/: mcp_stdio_test_client.py  smoke_test_mcp.py
server/src/ssh_connect/: __init__.py  server.py
server/tests/: test_ssh_connect.py
server/tools/uvx_shim/: uvx.cmd
tests/: test_connection.py  test_mcp_direct.py  test_mcp_protocol.py
