[project]
name = "ssh-connect"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.6.0", "paramiko>=3.4.0",]
[[project.authors]]
name = "suganuma"
email = "suganuma@lancard.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
ssh-connect = "ssh_connect:main"
